--- a/public/form.html
+++ b/public/form.html
@@ -42,7 +42,10 @@
       <input type="text" name="endpoint" placeholder="Endpoint" value="https://xdpj2nme28.execute-api.us-east-1.amazonaws.com/account/register" />
       <input type="text" name="username" value="sakuramiko35" />
       <input type="password" name="password" value="pekomikoteetee" />
+
+      <!-- not required for login, but required for register -->
       <input type="email" name="email" value="171274w@student.hci.edu.sg" />
+      
       <input type="submit" value="Send POST Request" />
     </form>
 
