--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,46 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="/styles/index.css">
+  
+  <title>Carousell Home</title>
+</head>
+<body>
+  <div id="menu-bar">
+    <span>Cars & Property</span>
+    <span>Fashion</span>
+    <span>Home and Living</span>
+    <span>Electronics & Mobiles</span>
+    <span>Hobbies & Games</span>
+    <span>Jobs & Services</span>
+    <span>Others</span>
+  </div>
 
+  <div id="title-bar">
+    <img id="carousell-logo" src="/media/carousell-logo.svg" alt="Carousell logo">
+    
+    <form method="post" id="search-form">
+      <input type="text" name="query" id="search-bar" placeholder="Search for an item">
+    </form>
+
+    <div id="user-actions">
+      <!--ensure profile picture is square (crop before upload? also need to crop server-side just in case)-->
+      <img id="profile-picture" src="/media/placeholder-profile-picture.jpeg" alt="Your profile picture">
+      <span id="user-greeting">Hello, <span id="username">NoobMaster69</span></span>
+      <i class="material-icons">expand_more</i>
+    </div>
+
+    <div id="sell-button-wrapper">
+      <button id="sell-button">Sell</button>
+    </div>
+  </div>
+</body>
+</html>
