Toggle like button CSS on click TODO: call API to like/un-like listing

--- a/public/index.html
+++ b/public/index.html
@@ -119,7 +119,7 @@
           <div class="item-condition">Absolutely trashed</div>
         </div>
         <div class="listing-action-buttons">
-          <button class="like-button material-icons">favorite_border</button>
+          <button class="like-button liked material-icons"></button>
           <span class="like-count">18</span>
           <button class="start-chat">
             <span>Start chat</span>
@@ -129,5 +129,7 @@
       </div>
     </div>
   </main>
+
+  <script src="/scripts/global.js"></script>
 </body>
 </html>
