Responsive UI for homepage

--- a/public/top-bar.html
+++ b/public/top-bar.html
@@ -9,7 +9,10 @@
     <span>Others</span>
   </div>
   <div id="title-bar">
-    <img id="carousell-logo" src="/media/carousell-logo.svg" alt="Carousell logo">
+    <a href="/">
+      <img id="carousell-logo" src="/media/carousell-logo.svg" alt="Carousell logo">
+      <img id="carousell-logo-mobile" src="/media/carousell-logo-no-text.svg" alt="Carousell logo">
+    </a>
     
     <form method="post" id="search-form">
       <input type="text" name="query" id="search-bar" placeholder="Search for an item">
