Add search button to search bar

--- a/public/top-bar.html
+++ b/public/top-bar.html
@@ -16,6 +16,7 @@
     
     <form method="post" id="search-form">
       <input type="text" name="query" id="search-bar" placeholder="Search for an item">
+      <button type="submit" class="material-icons">search</button>
     </form>
 
     <div id="user-actions">
