Organised CSS files, added search term as query param to search.html

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   
   <link rel="stylesheet" href="/styles/global.css">
+  <link rel="stylesheet" href="/styles/top-bar.css">
   <link rel="stylesheet" href="/styles/index.css">
   
   <title>Carousell Home</title>
