--- a/public/search.html
+++ b/public/search.html
@@ -12,10 +12,214 @@
   
   <link rel="stylesheet" href="/styles/global.css">
   <link rel="stylesheet" href="/styles/top-bar.css">
+  <link rel="stylesheet" href="/styles/search.css">
 
   <title>Search Carousell</title>
 </head>
 <body>
+  <main>
+    <h1 id="search-results-overview"></h1>
+    <div id="filters">
+      <div class="filter" id="category-filter">
+        <button class="filter-button">
+          <span>Category</span>
+          <i class="material-icons"></i>
+        </button>
+        <!--use CSS grid to organise options - 8 options high-->
+        <!--category search-->
+        <div class="filter-options" id="category-options">
+          <input type="text" id="category-search">
+          <div class="filter-option">
+            <button>Category 1</button>
+            <div class="subcategories">
+              <button>Category 1 Subcategory 1</button>
+              <button>Category 1 Subcategory 2</button>
+              <button>Category 1 Subcategory 3</button>
+              <button>Category 1 Subcategory 4</button>
+              <button>Category 1 Subcategory 5</button>
+              <button>Category 1 Subcategory 6</button>
+              <button>Category 1 Subcategory 7</button>
+              <button>Category 1 Subcategory 8</button>
+              <button>Category 1 Subcategory 9</button>
+              <button>Category 1 Subcategory 10</button>
+            </div>
+          </div>
+          <div class="filter-option">
+            <button>Category 1</button>
+            <div class="subcategories">
+              <button>Category 1 Subcategory 1</button>
+              <button>Category 1 Subcategory 2</button>
+              <button>Category 1 Subcategory 3</button>
+              <button>Category 1 Subcategory 4</button>
+              <button>Category 1 Subcategory 5</button>
+              <button>Category 1 Subcategory 6</button>
+              <button>Category 1 Subcategory 7</button>
+              <button>Category 1 Subcategory 8</button>
+              <button>Category 1 Subcategory 9</button>
+              <button>Category 1 Subcategory 10</button>
+            </div>
+          </div>
+          <div class="filter-option">
+            <button>Category 1</button>
+            <div class="subcategories">
+              <button>Category 1 Subcategory 1</button>
+              <button>Category 1 Subcategory 2</button>
+              <button>Category 1 Subcategory 3</button>
+              <button>Category 1 Subcategory 4</button>
+              <button>Category 1 Subcategory 5</button>
+              <button>Category 1 Subcategory 6</button>
+              <button>Category 1 Subcategory 7</button>
+              <button>Category 1 Subcategory 8</button>
+              <button>Category 1 Subcategory 9</button>
+              <button>Category 1 Subcategory 10</button>
+            </div>
+          </div>
+          <div class="filter-option">
+            <button>Category 1</button>
+            <div class="subcategories">
+              <button>Category 1 Subcategory 1</button>
+              <button>Category 1 Subcategory 2</button>
+              <button>Category 1 Subcategory 3</button>
+              <button>Category 1 Subcategory 4</button>
+              <button>Category 1 Subcategory 5</button>
+              <button>Category 1 Subcategory 6</button>
+              <button>Category 1 Subcategory 7</button>
+              <button>Category 1 Subcategory 8</button>
+              <button>Category 1 Subcategory 9</button>
+              <button>Category 1 Subcategory 10</button>
+            </div>
+          </div>
+          <div class="filter-option">
+            <button>Category 1</button>
+            <div class="subcategories">
+              <button>Category 1 Subcategory 1</button>
+              <button>Category 1 Subcategory 2</button>
+              <button>Category 1 Subcategory 3</button>
+              <button>Category 1 Subcategory 4</button>
+              <button>Category 1 Subcategory 5</button>
+              <button>Category 1 Subcategory 6</button>
+              <button>Category 1 Subcategory 7</button>
+              <button>Category 1 Subcategory 8</button>
+              <button>Category 1 Subcategory 9</button>
+              <button>Category 1 Subcategory 10</button>
+            </div>
+          </div>
+          <div class="filter-option">
+            <button>Category 1</button>
+            <div class="subcategories">
+              <button>Category 1 Subcategory 1</button>
+              <button>Category 1 Subcategory 2</button>
+              <button>Category 1 Subcategory 3</button>
+              <button>Category 1 Subcategory 4</button>
+              <button>Category 1 Subcategory 5</button>
+              <button>Category 1 Subcategory 6</button>
+              <button>Category 1 Subcategory 7</button>
+              <button>Category 1 Subcategory 8</button>
+              <button>Category 1 Subcategory 9</button>
+              <button>Category 1 Subcategory 10</button>
+            </div>
+          </div>
+          <div class="filter-option">
+            <button>Category 1</button>
+            <div class="subcategories">
+              <button>Category 1 Subcategory 1</button>
+              <button>Category 1 Subcategory 2</button>
+              <button>Category 1 Subcategory 3</button>
+              <button>Category 1 Subcategory 4</button>
+              <button>Category 1 Subcategory 5</button>
+              <button>Category 1 Subcategory 6</button>
+              <button>Category 1 Subcategory 7</button>
+              <button>Category 1 Subcategory 8</button>
+              <button>Category 1 Subcategory 9</button>
+              <button>Category 1 Subcategory 10</button>
+            </div>
+          </div>
+          <div class="filter-option">
+            <button>Category 1</button>
+            <div class="subcategories">
+              <button>Category 1 Subcategory 1</button>
+              <button>Category 1 Subcategory 2</button>
+              <button>Category 1 Subcategory 3</button>
+              <button>Category 1 Subcategory 4</button>
+              <button>Category 1 Subcategory 5</button>
+              <button>Category 1 Subcategory 6</button>
+              <button>Category 1 Subcategory 7</button>
+              <button>Category 1 Subcategory 8</button>
+              <button>Category 1 Subcategory 9</button>
+              <button>Category 1 Subcategory 10</button>
+            </div>
+          </div>
+          <div class="filter-option">
+            <button>Category 1</button>
+            <div class="subcategories">
+              <button>Category 1 Subcategory 1</button>
+              <button>Category 1 Subcategory 2</button>
+              <button>Category 1 Subcategory 3</button>
+              <button>Category 1 Subcategory 4</button>
+              <button>Category 1 Subcategory 5</button>
+              <button>Category 1 Subcategory 6</button>
+              <button>Category 1 Subcategory 7</button>
+              <button>Category 1 Subcategory 8</button>
+              <button>Category 1 Subcategory 9</button>
+              <button>Category 1 Subcategory 10</button>
+            </div>
+          </div>
+          <div class="filter-option">
+            <button>Category 1</button>
+            <div class="subcategories">
+              <button>Category 1 Subcategory 1</button>
+              <button>Category 1 Subcategory 2</button>
+              <button>Category 1 Subcategory 3</button>
+              <button>Category 1 Subcategory 4</button>
+              <button>Category 1 Subcategory 5</button>
+              <button>Category 1 Subcategory 6</button>
+              <button>Category 1 Subcategory 7</button>
+              <button>Category 1 Subcategory 8</button>
+              <button>Category 1 Subcategory 9</button>
+              <button>Category 1 Subcategory 10</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="filter filter-dropdown-expanded" id="sorting-filter">
+        <button class="filter-button">
+          <span>Sort by: Best match</span>
+          <i class="material-icons"></i>
+        </button>
+        <div class="filter-options" id="sorting-methods">
+          <div class="filter-option">Best match</div>
+          <div class="filter-option">Most recent</div>
+          <div class="filter-option">Lowest price</div>
+          <div class="filter-option">Highest price</div>
+        </div>
+      </div>
+      <div class="filter" id="condition-filter">
+        <button class="filter-button">
+          <span>Condition: New</span>
+          <i class="material-icons"></i>
+        </button>
+        <div class="filter-options" id="item-conditions">
+          <input type="checkbox" id="condition-new">
+          <label for="condition-new">New</label>
+          <input type="checkbox" id="condition-used">
+          <label for="condition-used">Used</label>
+        </div>
+      </div>
+      <div class="filter">
+        <button class="filter-button">
+          <span>Special Filter 1</span>
+          <i class="material-icons"></i>
+        </button>
+        <div class="filter-options">
+          <input type="checkbox" id="special-filter-value-1">
+          <label for="special-filter-value-1">Value 1</label>
+          <input type="checkbox" id="special-filter-value-2">
+          <label for="special-filter-value-2">Value 2</label>
+        </div>
+      </div>
+    </div>
+  </main>
+
   <script src="/scripts/global.js"></script>
   <script src="/scripts/search.js"></script>
 </body>
