Added search results UI + shifted some styles to global.css

--- a/public/index.html
+++ b/public/index.html
@@ -71,7 +71,7 @@
     </div>
 
     <h1>Your Daily Picks</h1>
-    <div id="daily-recommendations" class="card">
+    <div id="daily-recommendations" class="full-width-listings-container card">
       <div class="listing">
         <div class="listing-info-top">
           <img src="/media/placeholder-profile-picture.jpeg" alt="Seller profile picture" class="profile-picture">
