--- a/public/search.html
+++ b/public/search.html
@@ -218,9 +218,205 @@
         </div>
       </div>
     </div>
+
+    <div id="search-results" class="full-width-listings-container card">
+      <div class="listing">
+        <div class="listing-info-top">
+          <img src="/media/placeholder-profile-picture.jpeg" alt="Seller profile picture" class="profile-picture">
+          <div class="listing-info-top-text">
+            <div class="seller-username">Very Very Long Seller Username Very Very Long Seller Username</div>
+            <div class="listing-age">7 hours ago</div>
+          </div>
+        </div>
+        <div class="item-image-wrapper">
+          <img src="/media/placeholder-product-image.png" alt="Product image" class="item-image">
+        </div>
+        <div class="listing-info-bottom">
+          <div class="item-name">Alienware m15 R5 Gaming Laptop With Very Long Title</div>
+          <div class="item-price">S$3999999999999999999999999999999.99</div>
+          <div class="item-description">Dell Alienware gaming laptop with an extremely long item description</div>
+          <div class="item-condition">Absolutely trashed</div>
+        </div>
+        <div class="listing-action-buttons">
+          <button class="like-button liked material-icons"></button>
+          <span class="like-count">18</span>
+          <button class="start-chat"></button>
+          <button class="report-button material-icons">outlined_flag</button>
+        </div>
+      </div>
+      <div class="listing">
+        <div class="listing-info-top">
+          <img src="/media/placeholder-profile-picture.jpeg" alt="Seller profile picture" class="profile-picture">
+          <div class="listing-info-top-text">
+            <div class="seller-username">Very Very Long Seller Username Very Very Long Seller Username</div>
+            <div class="listing-age">7 hours ago</div>
+          </div>
+        </div>
+        <div class="item-image-wrapper">
+          <img src="/media/placeholder-product-image.png" alt="Product image" class="item-image">
+        </div>
+        <div class="listing-info-bottom">
+          <div class="item-name">Alienware m15 R5 Gaming Laptop With Very Long Title</div>
+          <div class="item-price">S$3999999999999999999999999999999.99</div>
+          <div class="item-description">Dell Alienware gaming laptop with an extremely long item description</div>
+          <div class="item-condition">Absolutely trashed</div>
+        </div>
+        <div class="listing-action-buttons">
+          <button class="like-button liked material-icons"></button>
+          <span class="like-count">18</span>
+          <button class="start-chat"></button>
+          <button class="report-button material-icons">outlined_flag</button>
+        </div>
+      </div>
+      <div class="listing">
+        <div class="listing-info-top">
+          <img src="/media/placeholder-profile-picture.jpeg" alt="Seller profile picture" class="profile-picture">
+          <div class="listing-info-top-text">
+            <div class="seller-username">Very Very Long Seller Username Very Very Long Seller Username</div>
+            <div class="listing-age">7 hours ago</div>
+          </div>
+        </div>
+        <div class="item-image-wrapper">
+          <img src="/media/placeholder-product-image.png" alt="Product image" class="item-image">
+        </div>
+        <div class="listing-info-bottom">
+          <div class="item-name">Alienware m15 R5 Gaming Laptop With Very Long Title</div>
+          <div class="item-price">S$3999999999999999999999999999999.99</div>
+          <div class="item-description">Dell Alienware gaming laptop with an extremely long item description</div>
+          <div class="item-condition">Absolutely trashed</div>
+        </div>
+        <div class="listing-action-buttons">
+          <button class="like-button liked material-icons"></button>
+          <span class="like-count">18</span>
+          <button class="start-chat"></button>
+          <button class="report-button material-icons">outlined_flag</button>
+        </div>
+      </div>
+      <div class="listing">
+        <div class="listing-info-top">
+          <img src="/media/placeholder-profile-picture.jpeg" alt="Seller profile picture" class="profile-picture">
+          <div class="listing-info-top-text">
+            <div class="seller-username">Very Very Long Seller Username Very Very Long Seller Username</div>
+            <div class="listing-age">7 hours ago</div>
+          </div>
+        </div>
+        <div class="item-image-wrapper">
+          <img src="/media/placeholder-product-image.png" alt="Product image" class="item-image">
+        </div>
+        <div class="listing-info-bottom">
+          <div class="item-name">Alienware m15 R5 Gaming Laptop With Very Long Title</div>
+          <div class="item-price">S$3999999999999999999999999999999.99</div>
+          <div class="item-description">Dell Alienware gaming laptop with an extremely long item description</div>
+          <div class="item-condition">Absolutely trashed</div>
+        </div>
+        <div class="listing-action-buttons">
+          <button class="like-button liked material-icons"></button>
+          <span class="like-count">18</span>
+          <button class="start-chat"></button>
+          <button class="report-button material-icons">outlined_flag</button>
+        </div>
+      </div>
+      <div class="listing">
+        <div class="listing-info-top">
+          <img src="/media/placeholder-profile-picture.jpeg" alt="Seller profile picture" class="profile-picture">
+          <div class="listing-info-top-text">
+            <div class="seller-username">Very Very Long Seller Username Very Very Long Seller Username</div>
+            <div class="listing-age">7 hours ago</div>
+          </div>
+        </div>
+        <div class="item-image-wrapper">
+          <img src="/media/placeholder-product-image.png" alt="Product image" class="item-image">
+        </div>
+        <div class="listing-info-bottom">
+          <div class="item-name">Alienware m15 R5 Gaming Laptop With Very Long Title</div>
+          <div class="item-price">S$3999999999999999999999999999999.99</div>
+          <div class="item-description">Dell Alienware gaming laptop with an extremely long item description</div>
+          <div class="item-condition">Absolutely trashed</div>
+        </div>
+        <div class="listing-action-buttons">
+          <button class="like-button liked material-icons"></button>
+          <span class="like-count">18</span>
+          <button class="start-chat"></button>
+          <button class="report-button material-icons">outlined_flag</button>
+        </div>
+      </div>
+      <div class="listing">
+        <div class="listing-info-top">
+          <img src="/media/placeholder-profile-picture.jpeg" alt="Seller profile picture" class="profile-picture">
+          <div class="listing-info-top-text">
+            <div class="seller-username">Very Very Long Seller Username Very Very Long Seller Username</div>
+            <div class="listing-age">7 hours ago</div>
+          </div>
+        </div>
+        <div class="item-image-wrapper">
+          <img src="/media/placeholder-product-image.png" alt="Product image" class="item-image">
+        </div>
+        <div class="listing-info-bottom">
+          <div class="item-name">Alienware m15 R5 Gaming Laptop With Very Long Title</div>
+          <div class="item-price">S$3999999999999999999999999999999.99</div>
+          <div class="item-description">Dell Alienware gaming laptop with an extremely long item description</div>
+          <div class="item-condition">Absolutely trashed</div>
+        </div>
+        <div class="listing-action-buttons">
+          <button class="like-button liked material-icons"></button>
+          <span class="like-count">18</span>
+          <button class="start-chat"></button>
+          <button class="report-button material-icons">outlined_flag</button>
+        </div>
+      </div>
+      <div class="listing">
+        <div class="listing-info-top">
+          <img src="/media/placeholder-profile-picture.jpeg" alt="Seller profile picture" class="profile-picture">
+          <div class="listing-info-top-text">
+            <div class="seller-username">Very Very Long Seller Username Very Very Long Seller Username</div>
+            <div class="listing-age">7 hours ago</div>
+          </div>
+        </div>
+        <div class="item-image-wrapper">
+          <img src="/media/placeholder-product-image.png" alt="Product image" class="item-image">
+        </div>
+        <div class="listing-info-bottom">
+          <div class="item-name">Alienware m15 R5 Gaming Laptop With Very Long Title</div>
+          <div class="item-price">S$3999999999999999999999999999999.99</div>
+          <div class="item-description">Dell Alienware gaming laptop with an extremely long item description</div>
+          <div class="item-condition">Absolutely trashed</div>
+        </div>
+        <div class="listing-action-buttons">
+          <button class="like-button liked material-icons"></button>
+          <span class="like-count">18</span>
+          <button class="start-chat"></button>
+          <button class="report-button material-icons">outlined_flag</button>
+        </div>
+      </div>
+      <div class="listing">
+        <div class="listing-info-top">
+          <img src="/media/placeholder-profile-picture.jpeg" alt="Seller profile picture" class="profile-picture">
+          <div class="listing-info-top-text">
+            <div class="seller-username">Very Very Long Seller Username Very Very Long Seller Username</div>
+            <div class="listing-age">7 hours ago</div>
+          </div>
+        </div>
+        <div class="item-image-wrapper">
+          <img src="/media/placeholder-product-image.png" alt="Product image" class="item-image">
+        </div>
+        <div class="listing-info-bottom">
+          <div class="item-name">Alienware m15 R5 Gaming Laptop With Very Long Title</div>
+          <div class="item-price">S$3999999999999999999999999999999.99</div>
+          <div class="item-description">Dell Alienware gaming laptop with an extremely long item description</div>
+          <div class="item-condition">Absolutely trashed</div>
+        </div>
+        <div class="listing-action-buttons">
+          <button class="like-button liked material-icons"></button>
+          <span class="like-count">18</span>
+          <button class="start-chat"></button>
+          <button class="report-button material-icons">outlined_flag</button>
+        </div>
+      </div>
+    </div>
   </main>
 
   <script src="/scripts/global.js"></script>
+  <script src="/scripts/utils.js"></script>
   <script src="/scripts/search.js"></script>
 </body>
 </html>
