Remove IDs for filter options divs

--- a/public/search.html
+++ b/public/search.html
@@ -27,7 +27,7 @@
         </button>
         <!--use CSS grid to organise options - 8 options high-->
         <!--category search-->
-        <div class="filter-options" id="category-options">
+        <div class="filter-options">
           <input type="text" id="category-search">
           <div class="filter-option">
             <button>Category 1</button>
@@ -186,7 +186,7 @@
           <span>Sort by: Best match</span>
           <i class="material-icons"></i>
         </button>
-        <div class="filter-options" id="sorting-methods">
+        <div class="filter-options">
           <div class="filter-option">Best match</div>
           <div class="filter-option">Most recent</div>
           <div class="filter-option">Lowest price</div>
@@ -198,7 +198,7 @@
           <span>Condition: New</span>
           <i class="material-icons"></i>
         </button>
-        <div class="filter-options" id="item-conditions">
+        <div class="filter-options">
           <input type="checkbox" id="condition-new">
           <label for="condition-new">New</label>
           <input type="checkbox" id="condition-used">
