Category + subcategory styling

--- a/public/search.html
+++ b/public/search.html
@@ -32,68 +32,165 @@
             <span class="material-icons">search</span>
             <input type="text" id="category-search" placeholder="Find a category">
           </div>
+
           <div class="filter-option">
             <span class="category-name">Category 1</span>
             <span class="material-icons">chevron_right</span>
             <div class="subcategories">
-              <button>Category 1 Subcategory 1</button>
-              <button>Category 1 Subcategory 2</button>
-              <button>Category 1 Subcategory 3</button>
-              <button>Category 1 Subcategory 4</button>
-              <button>Category 1 Subcategory 5</button>
-              <button>Category 1 Subcategory 6</button>
-              <button>Category 1 Subcategory 7</button>
-              <button>Category 1 Subcategory 8</button>
-              <button>Category 1 Subcategory 9</button>
-              <button>Category 1 Subcategory 10</button>
+              <div>Subcategory 1</div>
+              <div>Subcategory 2</div>
+              <div>Subcategory 3</div>
+              <div>Subcategory 4</div>
+              <div>Subcategory 5</div>
+              <div>Subcategory 6</div>
+              <div>Subcategory 7</div>
+              <div>Subcategory 8</div>
+              <div>Subcategory 9</div>
+              <div>Subcategory 10</div>
             </div>
           </div>
           <div class="filter-option">
-            <div class="category-name">Category 1</div>
+            <span class="category-name">Category 1</span>
             <span class="material-icons">chevron_right</span>
             <div class="subcategories">
-              <button>Category 1 Subcategory 1</button>
-              <button>Category 1 Subcategory 2</button>
-              <button>Category 1 Subcategory 3</button>
-              <button>Category 1 Subcategory 4</button>
-              <button>Category 1 Subcategory 5</button>
-              <button>Category 1 Subcategory 6</button>
-              <button>Category 1 Subcategory 7</button>
-              <button>Category 1 Subcategory 8</button>
-              <button>Category 1 Subcategory 9</button>
-              <button>Category 1 Subcategory 10</button>
+              <div>Subcategory 1</div>
+              <div>Subcategory 2</div>
+              <div>Subcategory 3</div>
+              <div>Subcategory 4</div>
+              <div>Subcategory 5</div>
+              <div>Subcategory 6</div>
+              <div>Subcategory 7</div>
+              <div>Subcategory 8</div>
+              <div>Subcategory 9</div>
+              <div>Subcategory 10</div>
             </div>
           </div>
           <div class="filter-option">
-            <div class="category-name">Category 1</div>
+            <span class="category-name">Category 1</span>
             <span class="material-icons">chevron_right</span>
             <div class="subcategories">
-              <button>Category 1 Subcategory 1</button>
-              <button>Category 1 Subcategory 2</button>
-              <button>Category 1 Subcategory 3</button>
-              <button>Category 1 Subcategory 4</button>
-              <button>Category 1 Subcategory 5</button>
-              <button>Category 1 Subcategory 6</button>
-              <button>Category 1 Subcategory 7</button>
-              <button>Category 1 Subcategory 8</button>
-              <button>Category 1 Subcategory 9</button>
-              <button>Category 1 Subcategory 10</button>
+              <div>Subcategory 1</div>
+              <div>Subcategory 2</div>
+              <div>Subcategory 3</div>
+              <div>Subcategory 4</div>
+              <div>Subcategory 5</div>
+              <div>Subcategory 6</div>
+              <div>Subcategory 7</div>
+              <div>Subcategory 8</div>
+              <div>Subcategory 9</div>
+              <div>Subcategory 10</div>
             </div>
           </div>
           <div class="filter-option">
-            <div class="category-name">Category 1</div>
+            <span class="category-name">Category 1</span>
             <span class="material-icons">chevron_right</span>
             <div class="subcategories">
-              <button>Category 1 Subcategory 1</button>
-              <button>Category 1 Subcategory 2</button>
-              <button>Category 1 Subcategory 3</button>
-              <button>Category 1 Subcategory 4</button>
-              <button>Category 1 Subcategory 5</button>
-              <button>Category 1 Subcategory 6</button>
-              <button>Category 1 Subcategory 7</button>
-              <button>Category 1 Subcategory 8</button>
-              <button>Category 1 Subcategory 9</button>
-              <button>Category 1 Subcategory 10</button>
+              <div>Subcategory 1</div>
+              <div>Subcategory 2</div>
+              <div>Subcategory 3</div>
+              <div>Subcategory 4</div>
+              <div>Subcategory 5</div>
+              <div>Subcategory 6</div>
+              <div>Subcategory 7</div>
+              <div>Subcategory 8</div>
+              <div>Subcategory 9</div>
+              <div>Subcategory 10</div>
+            </div>
+          </div>
+          <div class="filter-option">
+            <span class="category-name">Category 1</span>
+            <span class="material-icons">chevron_right</span>
+            <div class="subcategories">
+              <div>Subcategory 1</div>
+              <div>Subcategory 2</div>
+              <div>Subcategory 3</div>
+              <div>Subcategory 4</div>
+              <div>Subcategory 5</div>
+              <div>Subcategory 6</div>
+              <div>Subcategory 7</div>
+              <div>Subcategory 8</div>
+              <div>Subcategory 9</div>
+              <div>Subcategory 10</div>
+            </div>
+          </div>
+          <div class="filter-option">
+            <span class="category-name">Category 1</span>
+            <span class="material-icons">chevron_right</span>
+            <div class="subcategories">
+              <div>Subcategory 1</div>
+              <div>Subcategory 2</div>
+              <div>Subcategory 3</div>
+              <div>Subcategory 4</div>
+              <div>Subcategory 5</div>
+              <div>Subcategory 6</div>
+              <div>Subcategory 7</div>
+              <div>Subcategory 8</div>
+              <div>Subcategory 9</div>
+              <div>Subcategory 10</div>
+            </div>
+          </div>
+          <div class="filter-option">
+            <span class="category-name">Category 1</span>
+            <span class="material-icons">chevron_right</span>
+            <div class="subcategories">
+              <div>Subcategory 1</div>
+              <div>Subcategory 2</div>
+              <div>Subcategory 3</div>
+              <div>Subcategory 4</div>
+              <div>Subcategory 5</div>
+              <div>Subcategory 6</div>
+              <div>Subcategory 7</div>
+              <div>Subcategory 8</div>
+              <div>Subcategory 9</div>
+              <div>Subcategory 10</div>
+            </div>
+          </div>
+          <div class="filter-option">
+            <span class="category-name">Category 1</span>
+            <span class="material-icons">chevron_right</span>
+            <div class="subcategories">
+              <div>Subcategory 1</div>
+              <div>Subcategory 2</div>
+              <div>Subcategory 3</div>
+              <div>Subcategory 4</div>
+              <div>Subcategory 5</div>
+              <div>Subcategory 6</div>
+              <div>Subcategory 7</div>
+              <div>Subcategory 8</div>
+              <div>Subcategory 9</div>
+              <div>Subcategory 10</div>
+            </div>
+          </div>
+          <div class="filter-option">
+            <span class="category-name">Category 1</span>
+            <span class="material-icons">chevron_right</span>
+            <div class="subcategories">
+              <div>Subcategory 1</div>
+              <div>Subcategory 2</div>
+              <div>Subcategory 3</div>
+              <div>Subcategory 4</div>
+              <div>Subcategory 5</div>
+              <div>Subcategory 6</div>
+              <div>Subcategory 7</div>
+              <div>Subcategory 8</div>
+              <div>Subcategory 9</div>
+              <div>Subcategory 10</div>
+            </div>
+          </div>
+          <div class="filter-option">
+            <span class="category-name">Category 1</span>
+            <span class="material-icons">chevron_right</span>
+            <div class="subcategories">
+              <div>Subcategory 1</div>
+              <div>Subcategory 2</div>
+              <div>Subcategory 3</div>
+              <div>Subcategory 4</div>
+              <div>Subcategory 5</div>
+              <div>Subcategory 6</div>
+              <div>Subcategory 7</div>
+              <div>Subcategory 8</div>
+              <div>Subcategory 9</div>
+              <div>Subcategory 10</div>
             </div>
           </div>
         </div>
