Search for categories in category filter on search page

--- a/public/search.html
+++ b/public/search.html
@@ -32,166 +32,8 @@
             <span class="material-icons">search</span>
             <input type="text" id="category-search" placeholder="Find a category">
           </div>
-
-          <div class="filter-option">
-            <span class="category-name">Category 1</span>
-            <span class="material-icons">chevron_right</span>
-            <div class="subcategories">
-              <div>Subcategory 1</div>
-              <div>Subcategory 2</div>
-              <div>Subcategory 3</div>
-              <div>Subcategory 4</div>
-              <div>Subcategory 5</div>
-              <div>Subcategory 6</div>
-              <div>Subcategory 7</div>
-              <div>Subcategory 8</div>
-              <div>Subcategory 9</div>
-              <div>Subcategory 10</div>
-            </div>
-          </div>
-          <div class="filter-option">
-            <span class="category-name">Category 1</span>
-            <span class="material-icons">chevron_right</span>
-            <div class="subcategories">
-              <div>Subcategory 1</div>
-              <div>Subcategory 2</div>
-              <div>Subcategory 3</div>
-              <div>Subcategory 4</div>
-              <div>Subcategory 5</div>
-              <div>Subcategory 6</div>
-              <div>Subcategory 7</div>
-              <div>Subcategory 8</div>
-              <div>Subcategory 9</div>
-              <div>Subcategory 10</div>
-            </div>
-          </div>
-          <div class="filter-option">
-            <span class="category-name">Category 1</span>
-            <span class="material-icons">chevron_right</span>
-            <div class="subcategories">
-              <div>Subcategory 1</div>
-              <div>Subcategory 2</div>
-              <div>Subcategory 3</div>
-              <div>Subcategory 4</div>
-              <div>Subcategory 5</div>
-              <div>Subcategory 6</div>
-              <div>Subcategory 7</div>
-              <div>Subcategory 8</div>
-              <div>Subcategory 9</div>
-              <div>Subcategory 10</div>
-            </div>
-          </div>
-          <div class="filter-option">
-            <span class="category-name">Category 1</span>
-            <span class="material-icons">chevron_right</span>
-            <div class="subcategories">
-              <div>Subcategory 1</div>
-              <div>Subcategory 2</div>
-              <div>Subcategory 3</div>
-              <div>Subcategory 4</div>
-              <div>Subcategory 5</div>
-              <div>Subcategory 6</div>
-              <div>Subcategory 7</div>
-              <div>Subcategory 8</div>
-              <div>Subcategory 9</div>
-              <div>Subcategory 10</div>
-            </div>
-          </div>
-          <div class="filter-option">
-            <span class="category-name">Category 1</span>
-            <span class="material-icons">chevron_right</span>
-            <div class="subcategories">
-              <div>Subcategory 1</div>
-              <div>Subcategory 2</div>
-              <div>Subcategory 3</div>
-              <div>Subcategory 4</div>
-              <div>Subcategory 5</div>
-              <div>Subcategory 6</div>
-              <div>Subcategory 7</div>
-              <div>Subcategory 8</div>
-              <div>Subcategory 9</div>
-              <div>Subcategory 10</div>
-            </div>
-          </div>
-          <div class="filter-option">
-            <span class="category-name">Category 1</span>
-            <span class="material-icons">chevron_right</span>
-            <div class="subcategories">
-              <div>Subcategory 1</div>
-              <div>Subcategory 2</div>
-              <div>Subcategory 3</div>
-              <div>Subcategory 4</div>
-              <div>Subcategory 5</div>
-              <div>Subcategory 6</div>
-              <div>Subcategory 7</div>
-              <div>Subcategory 8</div>
-              <div>Subcategory 9</div>
-              <div>Subcategory 10</div>
-            </div>
-          </div>
-          <div class="filter-option">
-            <span class="category-name">Category 1</span>
-            <span class="material-icons">chevron_right</span>
-            <div class="subcategories">
-              <div>Subcategory 1</div>
-              <div>Subcategory 2</div>
-              <div>Subcategory 3</div>
-              <div>Subcategory 4</div>
-              <div>Subcategory 5</div>
-              <div>Subcategory 6</div>
-              <div>Subcategory 7</div>
-              <div>Subcategory 8</div>
-              <div>Subcategory 9</div>
-              <div>Subcategory 10</div>
-            </div>
-          </div>
-          <div class="filter-option">
-            <span class="category-name">Category 1</span>
-            <span class="material-icons">chevron_right</span>
-            <div class="subcategories">
-              <div>Subcategory 1</div>
-              <div>Subcategory 2</div>
-              <div>Subcategory 3</div>
-              <div>Subcategory 4</div>
-              <div>Subcategory 5</div>
-              <div>Subcategory 6</div>
-              <div>Subcategory 7</div>
-              <div>Subcategory 8</div>
-              <div>Subcategory 9</div>
-              <div>Subcategory 10</div>
-            </div>
-          </div>
-          <div class="filter-option">
-            <span class="category-name">Category 1</span>
-            <span class="material-icons">chevron_right</span>
-            <div class="subcategories">
-              <div>Subcategory 1</div>
-              <div>Subcategory 2</div>
-              <div>Subcategory 3</div>
-              <div>Subcategory 4</div>
-              <div>Subcategory 5</div>
-              <div>Subcategory 6</div>
-              <div>Subcategory 7</div>
-              <div>Subcategory 8</div>
-              <div>Subcategory 9</div>
-              <div>Subcategory 10</div>
-            </div>
-          </div>
-          <div class="filter-option">
-            <span class="category-name">Category 1</span>
-            <span class="material-icons">chevron_right</span>
-            <div class="subcategories">
-              <div>Subcategory 1</div>
-              <div>Subcategory 2</div>
-              <div>Subcategory 3</div>
-              <div>Subcategory 4</div>
-              <div>Subcategory 5</div>
-              <div>Subcategory 6</div>
-              <div>Subcategory 7</div>
-              <div>Subcategory 8</div>
-              <div>Subcategory 9</div>
-              <div>Subcategory 10</div>
-            </div>
+          <div id="category-search-results">
+            <div id="no-category-search-results">No categories found.</div>
           </div>
         </div>
       </div>
@@ -458,6 +300,6 @@
 
   <script src="/scripts/global.js"></script>
   <script src="/scripts/utils.js"></script>
-  <script src="/scripts/search.js"></script>
+  <script type="module" src="/scripts/search.js"></script>
 </body>
 </html>
