search works, imported sample

--- a/public/barebones-forms/search.html
+++ b/public/barebones-forms/search.html
@@ -45,8 +45,10 @@
       <input type="text" name="jwt" value="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyIjoic2FrdXJhbWlrbzM1IiwiaWF0IjoxNjI1OTg3ODY2fQ.8gQIzkpZ017C-4l7bMLSsIVdPdPnH6YGNAAkGEuIDBg" />
       ^ eventually, this API should not require auth.
 
-      <input type="number" name="category" value="0" />
-      <input type="text" name="itemName" value="" />
+      <input type="text" name="query" value="" />
+
+      <input type="text" name="refresh" value="putting 'immediate' here will refresh the index, which costs resources." />
+      ^ refresh?
       
       <input type="submit" value="Send POST Request" />
     </form>
